--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,9 +101,9 @@ services:
       bash -c "bin/apply-config-from-env.py conf/broker.conf && exec bin/pulsar broker"
 
   # Servicio de Procesamiento de Datos
-  data-processor-service:
-    container_name: data-processor-service
-    hostname: data-processor-service
+  data-transformation-service:
+    container_name: data-transformation-service
+    hostname: data-transformation-service
     build:
       context: .
       dockerfile: Dockerfile
