--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,6 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saludtechalpes
 BROKER_HOST=broker
+EXTERNAL_BROKER_HOST=broker
+BROKER_PORT=6650
+EXTERNAL_BROKER_PORT=6650
