--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -116,7 +116,7 @@ services:
       db:
         condition: service_started
     env_file:
-      - .env.local
+      - .env
     ports:
       - "5000:5000"
 
