:sparkles: external pulsar port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -116,9 +116,9 @@ services:
       db:
         condition: service_started
     env_file:
-      - .env.local
+      - .env
     ports:
-      - "5000:5000"
+      - "5001:5000"
 
   # Base de Datos PostgreSQL
   db:
