--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -104,9 +104,7 @@ services:
   data-transformation-service:
     container_name: data-transformation-service
     hostname: data-transformation-service
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/saludtechalpes/saludtechalpes-data-transformation-service:latest
     networks:
       - db_net
       - pulsar
