Fix broker host service name

--- a/kubernetes/staging/k8s-configMap.yaml
+++ b/kubernetes/staging/k8s-configMap.yaml
@@ -6,7 +6,7 @@ data:
   FLASK_ENV: "staging"
   APP_NAME: "saludtechalpes-data-transformation-service"
   PULSAR_HOST: "pulsar"
-  BROKER_HOST: "broker"
-  EXTERNAL_BROKER_HOST: "broker"
+  BROKER_HOST: "pulsar-broker"
+  EXTERNAL_BROKER_HOST: "pulsar-broker"
   BROKER_PORT: "6650"
   EXTERNAL_BROKER_PORT: "6650"
